replace Map.of() by Collections.emptyMap() for the whole project