@@ -11,6 +11,7 @@ import org.openlca.ilcd.util.Val;
 
 import javax.xml.namespace.QName;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -57,7 +58,7 @@ public class Classification implements Copyable<Classification> {
 	public Map<QName, String> getOtherAttributes() {
 		return otherAttributes != null
 			? otherAttributes
-			: Map.of();
+			: Collections.emptyMap();
 	}
 
 	// endregion
