@@ -13,6 +13,8 @@ import org.openlca.ilcd.commons.Publication;
 import org.openlca.ilcd.util.Val;
 
 import javax.xml.namespace.QName;
+
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -51,7 +53,7 @@ public class AdminInfo implements Copyable<AdminInfo> {
 	}
 
 	public Map<QName, String> getOtherAttributes() {
-		return otherAttributes != null ? otherAttributes : Map.of();
+		return otherAttributes != null ? otherAttributes : Collections.emptyMap();
 	}
 
 	// endregion
