@@ -12,6 +12,8 @@ import org.openlca.ilcd.commons.Other;
 import org.openlca.ilcd.util.Val;
 
 import javax.xml.namespace.QName;
+
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -42,7 +44,7 @@ public class InventoryMethod implements Copyable<InventoryMethod> {
 	}
 
 	public Map<QName, String> getOtherAttributes() {
-		return otherAttributes != null ? otherAttributes : Map.of();
+		return otherAttributes != null ? otherAttributes : Collections.emptyMap();
 	}
 
 	// endregion
